--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "babel-preset-env": "^1.7.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
+  },
+  "dependencies": {
+    "tinycolor2": "^1.4.1"
   }
 }
