--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository":{
+    "type" : "git",
+    "url" : "https://github.com/jakewright/color-wheel.git"
+  },
   "author": "Jake Wright",
   "license": "MIT",
   "devDependencies": {
